// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Organization {
  id        Int      @id @default(autoincrement())
  name      String
  users     User[]
  projects  Project[]
  createdAt DateTime @default(now())
}

model User {
  id             Int      @id @default(autoincrement())
  name           String
  email          String   @unique
  password       String
  role           String   @default("employee")
  organizationId Int?
  organization   Organization? @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  tasks          Task[]
  files          File[]   @relation("UserFiles") 
  notifications  Notification[]
  createdAt      DateTime @default(now())
}

model Project {
  id              Int           @id @default(autoincrement())
  name            String
  description     String?
  organizationId  Int
  organization    Organization  @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  tasks           Task[]
  files           File[]        @relation("ProjectFiles") 
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  @@unique([name, organizationId])
}

model Task {
  id           Int           @id @default(autoincrement())
  title        String
  description  String?
  status       String         @default("pending")
  projectId    Int
  project      Project        @relation(fields: [projectId], references: [id])
  assigneeId   Int
  assignee     User           @relation(fields: [assigneeId], references: [id])
  files        File[]         @relation("TaskFiles") 
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
}

model File {
  id           Int       @id @default(autoincrement())
  url          String
  publicId     String
  fileType     String
  uploadedById Int
  uploadedBy   User       @relation("UserFiles", fields: [uploadedById], references: [id]) 
  projectId    Int?
  project      Project?   @relation("ProjectFiles", fields: [projectId], references: [id]) 
  taskId       Int?
  task         Task?      @relation("TaskFiles", fields: [taskId], references: [id])       
  createdAt    DateTime   @default(now())
}

model Notification {
  id          Int      @id @default(autoincrement())
  message     String
  userId      Int
  user        User     @relation(fields: [userId], references: [id])
  isRead      Boolean  @default(false)
  createdAt   DateTime @default(now())
}
